docs/api/qiskit/0.44/qiskit.pulse.library.SechDeriv.mdx
---
title: SechDeriv
description: API reference for qiskit.pulse.library.SechDeriv
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.pulse.library.SechDeriv
---

<span id="qiskit-pulse-library-sechderiv" />

# qiskit.pulse.library.SechDeriv

<Function id="qiskit.pulse.library.SechDeriv" name="SechDeriv" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.25/qiskit/pulse/library/symbolic_pulses.py" signature="qiskit.pulse.library.SechDeriv(duration, amp, sigma, angle=0.0, name=None, limit_amplitude=None)">
  An unnormalized sech derivative pulse.

  The sech function is centered around the halfway point of the pulse, and the envelope of the pulse is given by:

  $$
  f(x) = \text{A}\frac{d}{dx}\left[\text{sech}
      \left(\frac{x-\mu}{\text{sigma}}\right)\right]  ,  0 <= x < duration
  $$

  where $\text{A} = \text{amp} \times\exp\left(i\times\text{angle}\right)$, $\mu=\text{duration}/2$, and $d/dx$ is a derivative with respect to x.

  **Parameters**

  *   **duration** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – Pulse length in terms of the sampling period dt.
  *   **amp** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – The magnitude of the amplitude of the pulse (the value of the corresponding sech function at the midpoint duration/2).
  *   **sigma** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – A measure of how wide or narrow the corresponding sech peak is, in terms of dt; described mathematically in the class docstring.
  *   **angle** ([*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)") *| None*) – The angle in radians of the complex phase factor uniformly scaling the pulse. Default value 0.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Display name for this pulse envelope.
  *   **limit\_amplitude** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)") *| None*) – If `True`, then limit the amplitude of the waveform to 1. The default is `True` and the amplitude is constrained to 1.

  **Returns**

  ScalableSymbolicPulse instance.

  **Return type**

  [*ScalableSymbolicPulse*](qiskit.pulse.library.ScalableSymbolicPulse "qiskit.pulse.library.symbolic_pulses.ScalableSymbolicPulse")
</Function>

